fixing thumbnails alignment

--- a/assets/less/oc_colors.less
+++ b/assets/less/oc_colors.less
@@ -1,9 +1,10 @@
-@oc-magenta    :    rgb(238,62,110);
-@oc-grey       :    rgb(241,242,245);
-@oc-white      :    rgb(254,254,250);
-@oc-meta-grey  :    rgb(153,153,153);
-@oc-dark-gray  :    rgb(142,144,144);
-@oc-dark-grey  :    rgb(63,63,63);
+@oc-magenta         :    rgb(238,62,110);
+@oc-grey            :    rgb(241,242,245);
+@oc-background-color:    rgb(241,242,245);
+@oc-white           :    rgb(254,254,250);
+@oc-meta-grey       :    rgb(153,153,153);
+@oc-dark-gray       :    rgb(142,144,144);
+@oc-dark-grey       :    rgb(63,63,63);
 
 @oc-hover-black:    #191115;
 
